Add Repository and Service Classes, one Test and ER-Diagrams and Postman Collection.
